doc/iptables.v4.router.txt
# Generated by iptables-save v1.4.21 on Wed Dec 26 20:43:25 2018
*nat
:PREROUTING ACCEPT [58539:5579092]
:INPUT ACCEPT [4249:332234]
:OUTPUT ACCEPT [20357:1094069]
:POSTROUTING ACCEPT [157:12729]
:delegate_postrouting - [0:0]
:delegate_prerouting - [0:0]
:postrouting_internet_rule - [0:0]
:postrouting_lan_rule - [0:0]
:postrouting_rule - [0:0]
:prerouting_internet_rule - [0:0]
:prerouting_lan_rule - [0:0]
:prerouting_rule - [0:0]
:zone_internet_postrouting - [0:0]
:zone_internet_prerouting - [0:0]
:zone_lan_postrouting - [0:0]
:zone_lan_prerouting - [0:0]
-A PREROUTING -j delegate_prerouting
-A POSTROUTING -j delegate_postrouting
-A delegate_postrouting -m comment --comment "user chain for postrouting" -j postrouting_rule
-A delegate_postrouting -o br-lan -j zone_lan_postrouting
-A delegate_postrouting -o eth0.2 -j zone_internet_postrouting
-A delegate_postrouting -o pppoe-rt -j zone_internet_postrouting
-A delegate_postrouting -o 6in4-henet_kis -j zone_internet_postrouting
-A delegate_prerouting -m comment --comment "user chain for prerouting" -j prerouting_rule
-A delegate_prerouting -i br-lan -j zone_lan_prerouting
-A delegate_prerouting -i eth0.2 -j zone_internet_prerouting
-A delegate_prerouting -i pppoe-rt -j zone_internet_prerouting
-A delegate_prerouting -i 6in4-henet_kis -j zone_internet_prerouting
-A zone_internet_postrouting -m comment --comment "user chain for postrouting" -j postrouting_internet_rule
-A zone_internet_postrouting -j MASQUERADE
-A zone_internet_prerouting -m comment --comment "user chain for prerouting" -j prerouting_internet_rule
-A zone_internet_prerouting -p tcp -m tcp --dport 55556 -m comment --comment mmaster -j DNAT --to-destination 10.100.100.10:55556
-A zone_internet_prerouting -p udp -m udp --dport 55556 -m comment --comment mmaster -j DNAT --to-destination 10.100.100.10:55556
-A zone_internet_prerouting -p tcp -m tcp --dport 554 -m comment --comment cam_rtsp -j DNAT --to-destination 10.100.100.166:554
-A zone_internet_prerouting -p udp -m udp --dport 554 -m comment --comment cam_rtsp -j DNAT --to-destination 10.100.100.166:554
-A zone_lan_postrouting -m comment --comment "user chain for postrouting" -j postrouting_lan_rule
-A zone_lan_postrouting -s 10.100.100.0/24 -d 10.100.100.166/32 -p tcp -m tcp --dport 554 -m comment --comment "cam_rtsp (reflection)" -j SNAT --to-source 10.100.100.1
-A zone_lan_postrouting -s 10.100.100.0/24 -d 10.100.100.166/32 -p udp -m udp --dport 554 -m comment --comment "cam_rtsp (reflection)" -j SNAT --to-source 10.100.100.1
-A zone_lan_prerouting -m comment --comment "user chain for prerouting" -j prerouting_lan_rule
-A zone_lan_prerouting -s 10.100.100.0/24 -d 91.210.98.62/32 -p tcp -m tcp --dport 554 -m comment --comment "cam_rtsp (reflection)" -j DNAT --to-destination 10.100.100.166:554
-A zone_lan_prerouting -s 10.100.100.0/24 -d 91.210.98.62/32 -p udp -m udp --dport 554 -m comment --comment "cam_rtsp (reflection)" -j DNAT --to-destination 10.100.100.166:554
-A zone_lan_prerouting -s 10.100.100.0/24 -d 100.70.38.218/32 -p tcp -m tcp --dport 554 -m comment --comment "cam_rtsp (reflection)" -j DNAT --to-destination 10.100.100.166:554
-A zone_lan_prerouting -s 10.100.100.0/24 -d 100.70.38.218/32 -p udp -m udp --dport 554 -m comment --comment "cam_rtsp (reflection)" -j DNAT --to-destination 10.100.100.166:554
COMMIT
# Completed on Wed Dec 26 20:43:25 2018
# Generated by iptables-save v1.4.21 on Wed Dec 26 20:43:25 2018
*raw
:PREROUTING ACCEPT [534321:304485866]
:OUTPUT ACCEPT [203068:29232882]
:delegate_notrack - [0:0]
-A PREROUTING -j delegate_notrack
COMMIT
# Completed on Wed Dec 26 20:43:25 2018
# Generated by iptables-save v1.4.21 on Wed Dec 26 20:43:25 2018
*mangle
:PREROUTING ACCEPT [534321:304485866]
:INPUT ACCEPT [209818:115116406]
:FORWARD ACCEPT [305081:186207004]
:OUTPUT ACCEPT [203068:29232882]
:POSTROUTING ACCEPT [508149:215439886]
:fwmark - [0:0]
:mssfix - [0:0]
:mwan3_connected - [0:0]
:mwan3_hook - [0:0]
:mwan3_iface_kis - [0:0]
:mwan3_iface_rt - [0:0]
:mwan3_ifaces - [0:0]
:mwan3_output_hook - [0:0]
:mwan3_policy_balanced - [0:0]
:mwan3_policy_kis_only - [0:0]
:mwan3_policy_kis_rt - [0:0]
:mwan3_policy_rt_kis - [0:0]
:mwan3_policy_rt_only - [0:0]
:mwan3_policy_strong_kis_rt - [0:0]
:mwan3_rules - [0:0]
:mwan3_track_kis - [0:0]
:mwan3_track_rt - [0:0]
-A PREROUTING -j mwan3_hook
-A PREROUTING -j fwmark
-A FORWARD -j mssfix
-A OUTPUT -j mwan3_hook
-A OUTPUT -j mwan3_output_hook
-A mssfix -o eth0.2 -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "internet (mtu_fix)" -j TCPMSS --clamp-mss-to-pmtu
-A mssfix -o pppoe-rt -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "internet (mtu_fix)" -j TCPMSS --clamp-mss-to-pmtu
-A mssfix -o 6in4-henet_kis -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "internet (mtu_fix)" -j TCPMSS --clamp-mss-to-pmtu
-A mwan3_connected -d 127.0.0.0/8 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 224.0.0.0/3 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 10.100.100.0/24 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 91.210.98.60/30 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 178.34.128.11/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 10.100.100.0/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 10.100.100.1/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 10.100.100.255/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 91.210.98.60/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 91.210.98.62/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 91.210.98.63/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 100.70.38.218/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 127.0.0.0/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 127.0.0.0/8 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 127.0.0.1/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_connected -d 127.255.255.255/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_hook -j CONNMARK --restore-mark --nfmask 0xff00 --ctmask 0xff00
-A mwan3_hook -m mark --mark 0x0/0xff00 -j mwan3_ifaces
-A mwan3_hook -m mark --mark 0x0/0xff00 -j mwan3_connected
-A mwan3_hook -m mark --mark 0x0/0xff00 -j mwan3_rules
-A mwan3_hook -j CONNMARK --save-mark --nfmask 0xff00 --ctmask 0xff00
-A mwan3_hook -m mark ! --mark 0xff00/0xff00 -j mwan3_connected
-A mwan3_iface_kis -s 91.210.98.60/30 -i eth0.2 -m mark --mark 0x0/0xff00 -m comment --comment default -j MARK --set-xmark 0xff00/0xff00
-A mwan3_iface_kis -i eth0.2 -m mark --mark 0x0/0xff00 -m comment --comment kis -j MARK --set-xmark 0x100/0xff00
-A mwan3_iface_rt -s 178.34.128.11/32 -i pppoe-rt -m mark --mark 0x0/0xff00 -m comment --comment default -j MARK --set-xmark 0xff00/0xff00
-A mwan3_iface_rt -i pppoe-rt -m mark --mark 0x0/0xff00 -m comment --comment rt -j MARK --set-xmark 0x200/0xff00
-A mwan3_ifaces -m mark --mark 0x0/0xff00 -j mwan3_iface_kis
-A mwan3_ifaces -m mark --mark 0x0/0xff00 -j mwan3_iface_rt
-A mwan3_output_hook -p icmp -m icmp --icmp-type 8 -m length --length 32 -j mwan3_track_kis
-A mwan3_output_hook -p icmp -m icmp --icmp-type 8 -m length --length 32 -j mwan3_track_rt
-A mwan3_policy_balanced -m mark --mark 0x0/0xff00 -m statistic --mode random --probability 0.20000000019 -m comment --comment "rt 2 10" -j MARK --set-xmark 0x200/0xff00
-A mwan3_policy_balanced -m mark --mark 0x0/0xff00 -m comment --comment "kis 8 8" -j MARK --set-xmark 0x100/0xff00
-A mwan3_policy_kis_only -m mark --mark 0x0/0xff00 -m comment --comment "kis 8 8" -j MARK --set-xmark 0x100/0xff00
-A mwan3_policy_kis_rt -m mark --mark 0x0/0xff00 -m comment --comment "kis 8 8" -j MARK --set-xmark 0x100/0xff00
-A mwan3_policy_rt_kis -m mark --mark 0x0/0xff00 -m comment --comment "rt 2 2" -j MARK --set-xmark 0x200/0xff00
-A mwan3_policy_rt_only -m mark --mark 0x0/0xff00 -m comment --comment "rt 2 2" -j MARK --set-xmark 0x200/0xff00
-A mwan3_policy_strong_kis_rt -m mark --mark 0x0/0xff00 -m comment --comment "kis 8 8" -j MARK --set-xmark 0x100/0xff00
-A mwan3_rules -p tcp -m multiport --sports 0:65535 -m multiport --dports 22,2200:2300 -m mark --mark 0x0/0xff00 -m comment --comment sticky_ssh -j mwan3_policy_strong_kis_rt
-A mwan3_rules -s 10.100.100.50/32 -m mark --mark 0x0/0xff00 -m comment --comment probe_kis -j mwan3_policy_kis_only
-A mwan3_rules -s 10.100.100.51/32 -m mark --mark 0x0/0xff00 -m comment --comment probe_rt -j mwan3_policy_rt_only
-A mwan3_rules -s 10.100.100.189/32 -m mark --mark 0x0/0xff00 -m comment --comment mf_cert_rt -j mwan3_policy_rt_only
-A mwan3_rules -s 10.100.100.10/32 -m mark --mark 0x0/0xff00 -m comment --comment sheridan -j mwan3_policy_strong_kis_rt
-A mwan3_rules -m mark --mark 0x0/0xff00 -m comment --comment default_rule -j mwan3_policy_balanced
-A mwan3_track_kis -d 4.2.2.2/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_kis -d 77.88.8.1/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_kis -d 77.88.8.8/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_kis -d 8.8.4.4/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_kis -d 8.8.8.8/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_kis -d 1.1.1.1/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_rt -d 4.2.2.2/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_rt -d 77.88.8.1/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_rt -d 77.88.8.8/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_rt -d 8.8.4.4/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_rt -d 8.8.8.8/32 -j MARK --set-xmark 0xff00/0xff00
-A mwan3_track_rt -d 1.1.1.1/32 -j MARK --set-xmark 0xff00/0xff00
COMMIT
# Completed on Wed Dec 26 20:43:25 2018
# Generated by iptables-save v1.4.21 on Wed Dec 26 20:43:25 2018
*filter
:INPUT ACCEPT [753:21408]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:delegate_forward - [0:0]
:delegate_input - [0:0]
:delegate_output - [0:0]
:forwarding_internet_rule - [0:0]
:forwarding_lan_rule - [0:0]
:forwarding_rule - [0:0]
:input_internet_rule - [0:0]
:input_lan_rule - [0:0]
:input_rule - [0:0]
:output_internet_rule - [0:0]
:output_lan_rule - [0:0]
:output_rule - [0:0]
:reject - [0:0]
:syn_flood - [0:0]
:zone_internet_dest_ACCEPT - [0:0]
:zone_internet_dest_REJECT - [0:0]
:zone_internet_forward - [0:0]
:zone_internet_input - [0:0]
:zone_internet_output - [0:0]
:zone_internet_src_REJECT - [0:0]
:zone_lan_dest_ACCEPT - [0:0]
:zone_lan_forward - [0:0]
:zone_lan_input - [0:0]
:zone_lan_output - [0:0]
:zone_lan_src_ACCEPT - [0:0]
-A INPUT -j delegate_input
-A FORWARD -j delegate_forward
-A OUTPUT -j delegate_output
-A delegate_forward -m comment --comment "user chain for forwarding" -j forwarding_rule
-A delegate_forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A delegate_forward -m conntrack --ctstate INVALID -j DROP
-A delegate_forward -i br-lan -j zone_lan_forward
-A delegate_forward -i eth0.2 -j zone_internet_forward
-A delegate_forward -i pppoe-rt -j zone_internet_forward
-A delegate_forward -i 6in4-henet_kis -j zone_internet_forward
-A delegate_forward -j reject
-A delegate_input -i lo -j ACCEPT
-A delegate_input -m comment --comment "user chain for input" -j input_rule
-A delegate_input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A delegate_input -m conntrack --ctstate INVALID -j DROP
-A delegate_input -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood
-A delegate_input -i br-lan -j zone_lan_input
-A delegate_input -i eth0.2 -j zone_internet_input
-A delegate_input -i pppoe-rt -j zone_internet_input
-A delegate_input -i 6in4-henet_kis -j zone_internet_input
-A delegate_output -o lo -j ACCEPT
-A delegate_output -m comment --comment "user chain for output" -j output_rule
-A delegate_output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A delegate_output -m conntrack --ctstate INVALID -j DROP
-A delegate_output -o br-lan -j zone_lan_output
-A delegate_output -o eth0.2 -j zone_internet_output
-A delegate_output -o pppoe-rt -j zone_internet_output
-A delegate_output -o 6in4-henet_kis -j zone_internet_output
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A reject -j REJECT --reject-with icmp-port-unreachable
-A syn_flood -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/sec --limit-burst 50 -j RETURN
-A syn_flood -j DROP
-A zone_internet_dest_ACCEPT -o eth0.2 -j ACCEPT
-A zone_internet_dest_ACCEPT -o pppoe-rt -j ACCEPT
-A zone_internet_dest_ACCEPT -o 6in4-henet_kis -j ACCEPT
-A zone_internet_dest_REJECT -o eth0.2 -j reject
-A zone_internet_dest_REJECT -o pppoe-rt -j reject
-A zone_internet_dest_REJECT -o 6in4-henet_kis -j reject
-A zone_internet_forward -m comment --comment "user chain for forwarding" -j forwarding_internet_rule
-A zone_internet_forward -m conntrack --ctstate DNAT -m comment --comment "Accept port forwards" -j ACCEPT
-A zone_internet_forward -j zone_internet_dest_REJECT
-A zone_internet_input -m comment --comment "user chain for input" -j input_internet_rule
-A zone_internet_input -p udp -m udp --dport 68 -m comment --comment Allow-DHCP-Renew -j ACCEPT
-A zone_internet_input -p icmp -m icmp --icmp-type 8 -m comment --comment Allow-Ping -j ACCEPT
-A zone_internet_input -s 185.37.61.200/32 -p tcp -m comment --comment allow_main_monitoring -j ACCEPT
-A zone_internet_input -s 185.37.61.200/32 -p udp -m comment --comment allow_main_monitoring -j ACCEPT
-A zone_internet_input -s 92.222.212.60/32 -p tcp -m tcp --dport 7777 -m comment --comment gitinskys_to_socks -j ACCEPT
-A zone_internet_input -s 92.222.212.60/32 -p udp -m udp --dport 7777 -m comment --comment gitinskys_to_socks -j ACCEPT
-A zone_internet_input -m conntrack --ctstate DNAT -m comment --comment "Accept port redirections" -j ACCEPT
-A zone_internet_input -j zone_internet_src_REJECT
-A zone_internet_output -m comment --comment "user chain for output" -j output_internet_rule
-A zone_internet_output -j zone_internet_dest_ACCEPT
-A zone_internet_src_REJECT -i eth0.2 -j reject
-A zone_internet_src_REJECT -i pppoe-rt -j reject
-A zone_internet_src_REJECT -i 6in4-henet_kis -j reject
-A zone_lan_dest_ACCEPT -o br-lan -j ACCEPT
-A zone_lan_forward -m comment --comment "user chain for forwarding" -j forwarding_lan_rule
-A zone_lan_forward -m comment --comment "forwarding lan -> internet" -j zone_internet_dest_ACCEPT
-A zone_lan_forward -m conntrack --ctstate DNAT -m comment --comment "Accept port forwards" -j ACCEPT
-A zone_lan_forward -j zone_lan_dest_ACCEPT
-A zone_lan_input -m comment --comment "user chain for input" -j input_lan_rule
-A zone_lan_input -m conntrack --ctstate DNAT -m comment --comment "Accept port redirections" -j ACCEPT
-A zone_lan_input -j zone_lan_src_ACCEPT
-A zone_lan_output -m comment --comment "user chain for output" -j output_lan_rule
-A zone_lan_output -j zone_lan_dest_ACCEPT
-A zone_lan_src_ACCEPT -i br-lan -j ACCEPT
COMMIT
# Completed on Wed Dec 26 20:43:25 2018
