doc/iptables.v6.router.txt
root@gate:~# ip6tables-save
# Generated by ip6tables-save v1.4.21 on Wed Dec 26 20:44:16 2018
*raw
:PREROUTING ACCEPT [296387:129961890]
:OUTPUT ACCEPT [8024:1037611]
:delegate_notrack - [0:0]
-A PREROUTING -j delegate_notrack
COMMIT
# Completed on Wed Dec 26 20:44:16 2018
# Generated by ip6tables-save v1.4.21 on Wed Dec 26 20:44:16 2018
*mangle
:PREROUTING ACCEPT [296387:129961890]
:INPUT ACCEPT [6687:411083]
:FORWARD ACCEPT [278078:127986222]
:OUTPUT ACCEPT [8024:1037611]
:POSTROUTING ACCEPT [286581:129058309]
:fwmark - [0:0]
:mssfix - [0:0]
-A PREROUTING -j fwmark
-A FORWARD -j mssfix
-A mssfix -o eth0.2 -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "internet (mtu_fix)" -j TCPMSS --clamp-mss-to-pmtu
-A mssfix -o pppoe-rt -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "internet (mtu_fix)" -j TCPMSS --clamp-mss-to-pmtu
-A mssfix -o 6in4-henet_kis -p tcp -m tcp --tcp-flags SYN,RST SYN -m comment --comment "internet (mtu_fix)" -j TCPMSS --clamp-mss-to-pmtu
COMMIT
# Completed on Wed Dec 26 20:44:16 2018
# Generated by ip6tables-save v1.4.21 on Wed Dec 26 20:44:16 2018
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:delegate_forward - [0:0]
:delegate_input - [0:0]
:delegate_output - [0:0]
:forwarding_internet_rule - [0:0]
:forwarding_lan_rule - [0:0]
:forwarding_rule - [0:0]
:input_internet_rule - [0:0]
:input_lan_rule - [0:0]
:input_rule - [0:0]
:output_internet_rule - [0:0]
:output_lan_rule - [0:0]
:output_rule - [0:0]
:reject - [0:0]
:syn_flood - [0:0]
:zone_internet_dest_ACCEPT - [0:0]
:zone_internet_dest_REJECT - [0:0]
:zone_internet_forward - [0:0]
:zone_internet_input - [0:0]
:zone_internet_output - [0:0]
:zone_internet_src_REJECT - [0:0]
:zone_lan_dest_ACCEPT - [0:0]
:zone_lan_forward - [0:0]
:zone_lan_input - [0:0]
:zone_lan_output - [0:0]
:zone_lan_src_ACCEPT - [0:0]
-A INPUT -j delegate_input
-A FORWARD -j delegate_forward
-A OUTPUT -j delegate_output
-A delegate_forward -m comment --comment "user chain for forwarding" -j forwarding_rule
-A delegate_forward -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A delegate_forward -m conntrack --ctstate INVALID -j DROP
-A delegate_forward -i br-lan -j zone_lan_forward
-A delegate_forward -i eth0.2 -j zone_internet_forward
-A delegate_forward -i pppoe-rt -j zone_internet_forward
-A delegate_forward -i 6in4-henet_kis -j zone_internet_forward
-A delegate_forward -j reject
-A delegate_input -i lo -j ACCEPT
-A delegate_input -m comment --comment "user chain for input" -j input_rule
-A delegate_input -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A delegate_input -m conntrack --ctstate INVALID -j DROP
-A delegate_input -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn_flood
-A delegate_input -i br-lan -j zone_lan_input
-A delegate_input -i eth0.2 -j zone_internet_input
-A delegate_input -i pppoe-rt -j zone_internet_input
-A delegate_input -i 6in4-henet_kis -j zone_internet_input
-A delegate_output -o lo -j ACCEPT
-A delegate_output -m comment --comment "user chain for output" -j output_rule
-A delegate_output -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A delegate_output -m conntrack --ctstate INVALID -j DROP
-A delegate_output -o br-lan -j zone_lan_output
-A delegate_output -o eth0.2 -j zone_internet_output
-A delegate_output -o pppoe-rt -j zone_internet_output
-A delegate_output -o 6in4-henet_kis -j zone_internet_output
-A reject -p tcp -j REJECT --reject-with tcp-reset
-A reject -j REJECT --reject-with icmp6-port-unreachable
-A syn_flood -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 25/sec --limit-burst 50 -j RETURN
-A syn_flood -j DROP
-A zone_internet_dest_ACCEPT -o eth0.2 -j ACCEPT
-A zone_internet_dest_ACCEPT -o pppoe-rt -j ACCEPT
-A zone_internet_dest_ACCEPT -o 6in4-henet_kis -j ACCEPT
-A zone_internet_dest_REJECT -o eth0.2 -j reject
-A zone_internet_dest_REJECT -o pppoe-rt -j reject
-A zone_internet_dest_REJECT -o 6in4-henet_kis -j reject
-A zone_internet_forward -m comment --comment "user chain for forwarding" -j forwarding_internet_rule
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 128 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 1 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 2 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 3 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 4/0 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -p ipv6-icmp -m icmp6 --icmpv6-type 4/1 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Forward -j ACCEPT
-A zone_internet_forward -j zone_internet_dest_REJECT
-A zone_internet_input -m comment --comment "user chain for input" -j input_internet_rule
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 128 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 1 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 2 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 3 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 4/0 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 4/1 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 133 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 135 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 134 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -p ipv6-icmp -m icmp6 --icmpv6-type 136 -m limit --limit 1000/sec -m comment --comment Allow-ICMPv6-Input -j ACCEPT
-A zone_internet_input -j zone_internet_src_REJECT
-A zone_internet_output -m comment --comment "user chain for output" -j output_internet_rule
-A zone_internet_output -j zone_internet_dest_ACCEPT
-A zone_internet_src_REJECT -i eth0.2 -j reject
-A zone_internet_src_REJECT -i pppoe-rt -j reject
-A zone_internet_src_REJECT -i 6in4-henet_kis -j reject
-A zone_lan_dest_ACCEPT -o br-lan -j ACCEPT
-A zone_lan_forward -m comment --comment "user chain for forwarding" -j forwarding_lan_rule
-A zone_lan_forward -m comment --comment "forwarding lan -> internet" -j zone_internet_dest_ACCEPT
-A zone_lan_forward -j zone_lan_dest_ACCEPT
-A zone_lan_input -m comment --comment "user chain for input" -j input_lan_rule
-A zone_lan_input -p tcp -m tcp --sport 547 --dport 546 -m comment --comment Allow-DHCPv6-local -j ACCEPT
-A zone_lan_input -p udp -m udp --sport 547 --dport 546 -m comment --comment Allow-DHCPv6-local -j ACCEPT
-A zone_lan_input -j zone_lan_src_ACCEPT
-A zone_lan_output -m comment --comment "user chain for output" -j output_lan_rule
-A zone_lan_output -j zone_lan_dest_ACCEPT
-A zone_lan_src_ACCEPT -i br-lan -j ACCEPT
COMMIT
# Completed on Wed Dec 26 20:44:16 2018
